sample/error/gen_negative-length-array.bfr
codegen $
  **let len = -1 in $
  $build {
    a: array(len) { x };
    b: cell;
  } in
  + b